appId: com.daivbharathi.daiv
---
- launchApp
- waitForAnimationToEnd

# Assert Home page visible
- assertVisible: "Home"  

- tapOn: "Faith"

- scroll
- scroll

- swipe:
    start: 80%,33%
    end: 20%,33%

- waitForAnimationToEnd
