appId: com.daivbharathi.daiv
---
- launchApp
- waitForAnimationToEnd

# Assert Home page visible
- assertVisible: "bottom_tab_home\nHome"


- tapOn: "bottom_tab_faith\nFaith"


- tapOn: "seva_explore_temples_see_more"

- waitForAnimationToEnd

# First card
- tapOn:
    point: 9%,33%

# Validate page opened
- waitForAnimationToEnd

- back

# Small scroll
- scroll

# Second card now moves into first position
- tapOn:
    point: 9%,33%

- scrollUntilVisible:
    element: "Book Seva"





